# VC-Lab4-Repo

vishnu/: KLT.cpp  OccupancyGrid.cpp  OccupancyGrid.h  VisualFrontend.cpp  VisualFrontend.h
wei/: CMakeLists.txt
wei/include/backend/: Backend.h
wei/include/core/: Features.h
wei/include/frontend/: OccupancyGrid.h  VisualFrontend.h
wei/include/logic/: VisualOdometryLogic.h
wei/src/demo/: demo.cpp  klt.cpp  klt_five_points.cpp
wei/src/frontend/: OccupancyGrid.cpp  VisualFrontend.cpp
wei/src/offline/: main.cpp
